--- a/CategoryPage/categoryStyle.css
+++ b/CategoryPage/categoryStyle.css
@@ -85,8 +85,12 @@
 @media screen and (max-width: 768px) {
   .mainContent {
     display: flex;
+    padding: 0em;
     flex-direction: column;
+  }
 
+  .categoryHeader {
+    justify-content: center;
   }
 
   .pageContainer {
