--- a/SharedStyle/movieListStyle.css
+++ b/SharedStyle/movieListStyle.css
@@ -68,9 +68,9 @@
 }
 
 .movieCard img {
-    width: 100%;
+    width: 200px;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .card-textContent {
