--- a/IndexPage/indexStyle.css
+++ b/IndexPage/indexStyle.css
@@ -75,6 +75,7 @@
   -webkit-box-orient: vertical;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
   padding: 0 3em;
+  min-height: 50px;
 }
 
 .main_Content {
@@ -83,6 +84,7 @@
   padding: 5rem;
   width: calc(100vw - 85px);
   margin-top: 1em;
+  min-height: 100vh;
 }
 
 .categoryHeader {
@@ -97,6 +99,7 @@
   flex-direction: column;
   gap: 1rem;
   padding: 5rem 1rem;
+  min-height: 410px;
 }
 
 @media screen and (max-width: 768px) {
