--- a/IndexPage/indexStyle.css
+++ b/IndexPage/indexStyle.css
@@ -86,7 +86,7 @@
   display: flex;
   flex-direction: column;
   padding: 5rem;
-  width: calc(100vw - 85px);
+  width: calc(100vw - 15em);
   margin-top: 1em;
   min-height: 100vh;
 }
