--- a/IndexPage/indexStyle.css
+++ b/IndexPage/indexStyle.css
@@ -30,7 +30,7 @@
   object-fit: cover;
   position: relative;
   overflow: hidden;
-  border-bottom: 10px solid rgb(0, 0, 0);
+  border-bottom: 10px solid #181818;
 }
 
 
