--- a/MoviePage/movieIndexStyle.css
+++ b/MoviePage/movieIndexStyle.css
@@ -75,7 +75,8 @@
      flex-direction: column;
      align-items: center;
      text-align: center;
-     margin-left: 3.5em;
+     margin:auto;
+    padding:0;
    }
   .moviePageContainer{
     padding:0;
