--- a/MoviePage/movieIndexStyle.css
+++ b/MoviePage/movieIndexStyle.css
@@ -70,7 +70,7 @@
 
  @media screen and (max-width:768px) {
    .moviePageContent {
-     width: 100%;
+     width: calc( 100% - 2em );
      display: flex;
      flex-direction: column;
      align-items: center;
