--- a/MoviePage/movieIndexStyle.css
+++ b/MoviePage/movieIndexStyle.css
@@ -75,7 +75,7 @@
      flex-direction: column;
      align-items: center;
      text-align: center;
-     margin:2.5em;
+     margin-left:2.5em;
      padding:0;
    }
   .moviePageContainer{
